Login Page to Live Steam
can use whatever you want for the username and pass for now. It sends you straight to the live stream (or in this casre youtube lol)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Rpibell</string>
     <string name="LiveViewButtonText">ON / OFF</string>
+    <string name="touchless_doorbell_login_text">TouchLess DoorBell Login</string>
+    <string name="UserNameInputHint">Username</string>
+    <string name="PasswordInputHint">Password</string>
+    <string name="loginButtonText">LOGIN</string>
+    <string name="NewUserButtonText">New User</string>
 </resources>
