--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="BackButtonText">BACK</string>
     <string name="log_out_button_Text">LOG OUT</string>
     <string name="settings">Settings</string>
+    <string name="take_pic_button_text">TAKE PIC</string>
 </resources>
