--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="log_out_button_Text">LOG OUT</string>
     <string name="settings">Settings</string>
     <string name="take_pic_button_text">TAKE PIC</string>
+    <string name="armDeviceSwitchText">ARM/DISARM RPi DOORBELL</string>
 </resources>
