--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="settings">Settings</string>
     <string name="take_pic_button_text">TAKE PIC</string>
     <string name="armDeviceSwitchText">ARM/DISARM RPi DOORBELL</string>
+    <string name="send_notifications_TEXT">SEND NOTIFICATIONS</string>
 </resources>
