--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Rpibell</string>
+    <string name="app_name">PiBell</string>
     <string name="LiveViewButtonText">ON / OFF</string>
-    <string name="touchless_doorbell_login_text">TouchLess DoorBell Login</string>
-    <string name="UserNameInputHint">Username</string>
+    <string name="touchless_doorbell_login_text">PiBell Login</string>
+    <string name="EmailInputHint">Email</string>
     <string name="PasswordInputHint">Password</string>
     <string name="loginButtonText">LOGIN</string>
     <string name="NewUserButtonText">New User</string>
@@ -15,4 +15,29 @@
     <string name="send_notifications_TEXT">SEND NOTIFICATIONS</string>
     <string name="medaiButtonText">MEDIA</string>
     <string name="mediapagebackbuttonText">mediaPageBackButton</string>
+    <string name="sign_up_button_text">SIGN UP</string>
+    <string name="pibell_sign_up_title_text">PiBell Sign-Up</string>
+    <string name="rpi_device_hostname_signup_page_hint">RPi Device Hostname</string>
+    <string name="email_address_sign_up_page_hint">Email (EX: user@domain.com)</string>
+    <string name="name_sign_up_page_hint">Name</string>
+    <string name="password_sign_up_page_hint">Password (At least 6 characters)</string>
+    <string name="manage_guests">MANAGE GUESTS</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="add_a_guest">Add a Guest</string>
+    <string name="add_guest">ADD GUEST</string>
 </resources>
