--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="loginButtonText">LOGIN</string>
     <string name="NewUserButtonText">New User</string>
     <string name="live_view_button_text">Live View</string>
-    <string name="BackButtonText">BACK</string>
-    <string name="log_out_button_Text">LOG OUT</string>
+    <string name="BackButtonText">Back</string>
+    <string name="log_out_button_Text">Log Out</string>
     <string name="settings">Settings</string>
     <string name="take_pic_button_text">TAKE PIC</string>
     <string name="armDeviceSwitchText">ARM/DISARM RPi DOORBELL</string>
@@ -58,5 +58,10 @@
     <string name="pibell_guest_sign_up_page_title">PiBell Guest Sign Up</string>
     <string name="admin_id_hint">Admin ID</string>
     <string name="forgot_password_text">Forgot Password?</string>
-    <string name="change_email_button_text">Change email</string>
+    <string name="change_email_button_text">Change Email</string>
+    <string name="guest_home_page_notification_log_text">Notification Log</string>
+    <string name="guest_home_page_settings_button_text">Settings</string>
+    <string name="push_notifications_text">PUSH NOTIFICATIONS</string>
+    <string name="change_password_button_text">Change Password</string>
+    <string name="delete_account_button_text">Delete Account</string>
 </resources>
