--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,6 @@
     <string name="live_view_button_text">Live View</string>
     <string name="BackButtonText">Back</string>
     <string name="log_out_button_Text">Log Out</string>
-    <string name="settings">Settings</string>
     <string name="take_pic_button_text">TAKE PIC</string>
     <string name="armDeviceSwitchText">ARM/DISARM RPi DOORBELL</string>
     <string name="send_notifications_TEXT">SEND NOTIFICATIONS</string>
@@ -58,14 +57,7 @@
     <string name="pibell_guest_sign_up_page_title">PiBell Guest Sign Up</string>
     <string name="admin_id_hint">Admin ID</string>
     <string name="forgot_password_text">Forgot Password?</string>
-    <string name="change_email_button_text">Change Email</string>
-    <string name="guest_home_page_notification_log_text">Notification Log</string>
-    <string name="guest_home_page_settings_button_text">Settings</string>
-    <string name="push_notifications_text">PUSH NOTIFICATIONS</string>
-    <string name="change_password_button_text">Change Password</string>
-    <string name="delete_account_button_text">Delete Account</string>
-    <string name="help_page_title_Text">HELP PAGE</string>
-    <string name="connection_status_label_text">Connection Status:</string>
+    <string name="change_email_button_text">Change email</string>
     <string name="help_page_retry_button_text">Retry</string>
     <string name="help_page_general_help_text">
         Welcome!<br/>
@@ -87,4 +79,13 @@
     <string name="todo7">TODO</string>
     <string name="help_page_button_Text">Help</string>
     <string name="fullLine" />
+    <string name="connection_status_label_text" />
+    <string name="help_page_title_Text" />
+    <string name="guest_home_page_settings_button_text" />
+    <string name="guest_home_page_notification_log_text" />
+    <string name="change_password_button_text" />
+    <string name="push_notifications_text">Push Notifications</string>
+    <string name="home">Home</string>
+    <string name="Camera">Camera</string>
+    <string name="Settings">Settings</string>
 </resources>
